# myls

./: Cargo.toml
crates/ls_core/: Cargo.toml
crates/ls_core/src/: lib.rs
crates/lserver/: Cargo.toml
crates/lserver/src/: main.rs  tracing.rs
test/: TestController.ts  test.html
vscode-client/: package.json  pnpm-lock.yaml  tsconfig.json
vscode-client/client/src/: extension.ts
