[package]
name = "ls_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = { workspace = true }
tree-sitter = "0.25"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
cc="*"
